--- a/login.html
+++ b/login.html
@@ -5,6 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="styles.css">
+    <script type="module">
+        // Importações do Firebase
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
+        import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
+
+        // Configuração do Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyAVkw0_eJ3voju4FRaO6QEOO3oJgH4_V9Y",
+            authDomain: "d4u-80b32.firebaseapp.com",
+            projectId: "d4u-80b32",
+            storageBucket: "d4u-80b32.appspot.com",
+            messagingSenderId: "428637666189",
+            appId: "1:428637666189:web:a0f160148e66382ba51bc4",
+            measurementId: "G-MCB3DBVLN2"
+        };
+
+        // Inicialize o Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+
+        // Função para login
+        window.onload = function () {
+            const loginForm = document.getElementById('login-form');
+            loginForm.addEventListener('submit', (e) => {
+                e.preventDefault();
+                const email = document.getElementById('email').value;
+                const password = document.getElementById('password').value;
+
+                signInWithEmailAndPassword(auth, email, password)
+                    .then(() => {
+                        window.location.href = 'index.html'; // Redireciona após login
+                    })
+                    .catch((error) => {
+                        document.getElementById('error-message').textContent = error.message;
+                    });
+            });
+
+            // Adiciona o evento ao botão de registro
+            const registerBtn = document.getElementById('register-btn');
+            registerBtn.addEventListener('click', () => {
+                window.location.href = 'register.html'; // Redireciona para a página de registro
+            });
+        };
+    </script>
 </head>
 <body>
     <!-- Conteúdo do formulário de login -->
@@ -25,42 +69,5 @@
         </form>
         <p id="error-message" style="color: red;"></p>
     </div>
-
-    <script>
-
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-analytics.js";
-  
-  const firebaseConfig = {
-    apiKey: "AIzaSyAVkw0_eJ3voju4FRaO6QEOO3oJgH4_V9Y",
-    authDomain: "d4u-80b32.firebaseapp.com",
-    projectId: "d4u-80b32",
-    storageBucket: "d4u-80b32.appspot.com",
-    messagingSenderId: "428637666189",
-    appId: "1:428637666189:web:a0f160148e66382ba51bc4",
-    measurementId: "G-MCB3DBVLN2"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-
-        // Função para login
-        const loginForm = document.getElementById('login-form');
-        loginForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            auth.signInWithEmailAndPassword(email, password)
-                .then(() => {
-                    window.location.href = 'index.html'; // Redireciona após login
-                })
-                .catch((error) => {
-                    document.getElementById('error-message').textContent = error.message;
-                });
-        });
-
-    </script>
 </body>
 </html>
